fix: adjust applications section on mobile

--- a/src/components/ApplicationsInfoGraphic/ApplicationsInfoGraphic.module.css
+++ b/src/components/ApplicationsInfoGraphic/ApplicationsInfoGraphic.module.css
@@ -36,6 +36,41 @@
   z-index: 1;
 }
 
+@media (max-width: 900px) {
+  .infoGraphicContainer {
+    height: 825px;
+    padding-left: 10%;
+    padding-right: 10%;
+    width: 900px;
+    overflow-x: scroll;
+    overflow-y: hidden;
+  }
+  
+  .infoGraphicInternalContainer {
+    flex: 1;
+    flex-grow: 1;
+  }
+
+  .infoGraphicCore {
+    width: 40%;
+    left: 55%;
+  }
+
+  .infoGraphicArrowBottomIcon {
+    width: 30%;
+  }
+  
+  .bg, .bg5, .bg4 {
+    opacity: 0.4;
+  }
+}
+
+@media (min-width: 600px) and (max-width: 900px) {
+  .bg, .bg5, .bg4 {
+    max-width: 1080px;
+  }
+}
+
 .infoGraphicItem {
   width: 260px;
   height: 291px;
